--- a/add_customer.html
+++ b/add_customer.html
@@ -39,10 +39,10 @@
         <input type="text" required id="zip"><br><br>
 
         <label for="phone">Phone Number</label><br>
-        <input type="text" required id="phone"><br><br>
+        <input type="text" id="phone" placeholder="999-999-9999"><br><br>
     
         <label for="email">Email</label><br>
-        <input type="email" required id="email"><br><br>
+        <input type="email" id="email" autofocus><br><br>
 
         <input type="submit" class="btn btn-warning" name="submit" id="submit" value="Add Delivery Information">
         <input type="button" class="btn btn-warning" name="cancel" id="cancel" value="Cancel">        
