--- a/add_customer.html
+++ b/add_customer.html
@@ -24,6 +24,7 @@
             <option value="hotel">Hotel</option>
             <option value="dorm">Dorm</option>
             <option value="other">Other</option>
+                <!-- <input type="text" placeholder="enter other address type"> -->
         </select><br>
 
         <label for="address">Street Address</label><br>
