--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar sticky-top navbar-expand lg navbar-dark bg-dark">
         
         <a class="navbar-brand" href="#">
-            <img src="/images/pizza_cat_ico.png" width="55" height="55" alt="">Maki'a Pizza
+            <img src="/images/pizza_cat_ico.png" width="55" height="55" alt="">Maki Maki Pizza
         </a>
         <div class="collapse navbar-collapse ml-auto" id="navbarNav">
             <ul class="navbar-nav ml-auto">
@@ -43,15 +43,15 @@
     </nav>
     <div class="jumbotron text-center text-dark font-weight-bold bg-cover" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.623) 0%,rgba(255, 255, 255, 0.582) 100%), url('/images/crispy pizza.jpg')" >
         <div class="container">
-        <h1 class="display-4" >Welcome to Maki'a Pizza!</h1>
+        <h1 class="display-4" >Welcome to Maki Maki Pizza!</h1>
         <p class="lead font-weight-bold">Since 1981, Maki'a Pizza has been a local favorite for West County residents.</p>
         <hr class="my-4">
         <p>We use only fresh, high quality ingredients, prepared to order in our Maki kitchen.</p>
         <!-- <a class="btn btn-success btn-lg" href="#" role="button">MENU</a> -->
       </div>
     <div class="mt-2 ml-4">
-        <h1>Order Online</h1>
-            <button id="btnAddCustomer" class="btn btn-warning">Start with your Delivery Information</button>
+        <h1>Get Your Custom Pizza</h1>
+            <button id="btnAddCustomer" class="btn btn-warning">Enter Your Information Here </button>
             <br><br>
             <output id="loginDetails"></output>
     </div>
