--- a/add_customer.html
+++ b/add_customer.html
@@ -28,16 +28,16 @@
         </select><br>
 
         <label for="address">Street Address</label><br>
-        <input type="text" required id="address"><br><br>
+        <input type="text" id="address"><br><br>
 
         <label for="city">City</label><br>
-        <input type="text" required id="city"><br><br>
+        <input type="text" id="city"><br><br>
 
         <label for="state">State</label><br>
-        <input type="text" required id="state"><br><br>
+        <input type="text" id="state"><br><br>
 
         <label for="zip">Zip code</label><br>
-        <input type="text" required id="zip"><br><br>
+        <input type="text" id="zip"><br><br>
 
         <label for="phone">Phone Number</label><br>
         <input type="text" id="phone" placeholder="999-999-9999"><br><br>
