--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order Online</a>
+                <a class="nav-link" href="buildpizza.html">Order Now</a>
               </li>
              
             </ul>
@@ -52,7 +52,7 @@
       </div>
     <div class="mt-2 ml-4">
         <h1>Get Your Custom Pizza</h1>
-            <button id="btnAddCustomer" class="btn btn-warning">Enter Your Information Here </button>
+            <button id="btnAddCustomer" class="btn btn-warning">Start Here with Your Info </button>
             <br><br>
             <output id="loginDetails"></output>
     </div>
