--- a/buildpizza.html
+++ b/buildpizza.html
@@ -44,7 +44,7 @@
             </div>
                 
         </nav>
-        <h1>Start your making your custom Maki Pizza</h1><br>
+        <h1>Start making your custom Maki Pizza</h1><br>
         <h2>Select Your Dough</h2>
         <div class="form-check">
             <input class="form-check-input dough" id="handtossed" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -54,7 +54,7 @@
         </div>
         <div class="form-check">
             <input class="form-check-input dough" id="thincrust" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-            <label class="form-check-label" for="flexRadioDefault2">
+            <label class="form-check-label " for="flexRadioDefault2">
                 Thin Crust
             </label>
         </div> 
@@ -138,7 +138,9 @@
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
             <label class="form-check-label" for="inlineCheckbox11">Onion</label>
-        </div>
+        </div><br><br>
+        <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Finished Building Pizza</button>
+        <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Cancel</button>
         <script src="js/build_pizza.js"></script>
     </body>
 </container>
