--- a/buildpizza.html
+++ b/buildpizza.html
@@ -46,29 +46,31 @@
         </nav>
         <h1>Start making your custom Maki Pizza</h1><br>
         <h2>Select Your Dough</h2>
-        <div class="form-check">
-            <input class="form-check-input dough" id="handtossed" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-            Hand Tossed
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input dough" id="thincrust" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-            <label class="form-check-label " for="flexRadioDefault2">
-                Thin Crust
-            </label>
-        </div> 
-        <div  class="form-check">
-            <input class="form-check-input dough" id="nystyle" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
-            <label class="form-check-label" for="flexRadioDefault3">
-                New York Style
-            </label>
-        </div> 
-        <div  class="form-check">
-            <input class="form-check-input dough" id="gluten" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
-            <label class="form-check-label" for="flexRadioDefault4">
-                Gluten Free
-            </label><br><br>
+        <div id="selectdough">
+            <div class="form-check">
+                <input class="form-check-input dough" id="handtossed" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                Hand Tossed
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input dough" id="thincrust" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label " for="flexRadioDefault2">
+                    Thin Crust
+                </label>
+            </div> 
+            <div  class="form-check">
+                <input class="form-check-input dough" id="nystyle" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                <label class="form-check-label" for="flexRadioDefault3">
+                    New York Style
+                </label>
+            </div> 
+            <div  class="form-check">
+                <input class="form-check-input dough" id="gluten" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                <label class="form-check-label" for="flexRadioDefault4">
+                    Gluten Free
+                </label><br><br>
+            </div>
         </div>
         
         <h2>Select Your Pizza Size</h2>
@@ -77,13 +79,15 @@
         </select><br><br>
         
         <h2>Select Your Cheese</h2>
-        <select id="cheese" class="form-select" aria-label="Default select example">      
-            <option selected>Your Cheese Options</option>
-            <option value="1">Light: no charge</option>
-            <option value="2">Normal: no charge</option>
-            <option value="3">Extra: +$2.99</option>
-            <option value="3">Double: +$3.99</option>
-        </select><br><br>
+        <div id="selectsize">
+            <select id="cheese" class="form-select" aria-label="Default select example">      
+                <option selected="selected">Your Cheese Options</option>
+                <option value="1">Light: no charge</option>
+                <option value="2">Normal: no charge</option>
+                <option value="3">Extra: +$2.99</option>
+                <option value="3">Double: +$3.99</option>
+            </select><br><br>
+        </div>
 
         <h2>Select Your Sauce</h2>
         <select id="sauce" class="form-select" aria-label="Default select example">      
