--- a/buildpizza.html
+++ b/buildpizza.html
@@ -85,7 +85,7 @@
                 <option value="1">Light: no charge</option>
                 <option value="2">Normal: no charge</option>
                 <option value="3">Extra: +$2.99</option>
-                <option value="3">Double: +$3.99</option>
+                <option value="4">Double: +$3.99</option>
             </select><br><br>
         </div>
 
@@ -143,8 +143,9 @@
             <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
             <label class="form-check-label" for="inlineCheckbox11">Onion</label>
         </div><br><br>
+
         <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Finished Building Pizza</button>
-        <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Cancel</button>
+        <button type="button" class="btn btn-warning btn-lg" id="cancelOrder">Cancel</button>
         <script src="js/build_pizza.js"></script>
     </body>
 </container>
