--- a/buildpizza.html
+++ b/buildpizza.html
@@ -7,6 +7,7 @@
     <title>Build Your Pizza</title>
     <link rel="shortcut icon" type="image/jpg" href="images/pizza_cat_ico.png"/>
     <script src="js/main.js"></script>
+    <script src="js/running_total.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     
