--- a/buildpizza.html
+++ b/buildpizza.html
@@ -58,25 +58,25 @@
                 <h2>Select Your Dough</h2>
                 <div id="selectdough"class="col" >
                     <div class="form-check" >
-                        <input class="form-check-input dough" id="handtossed" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <input class="form-check-input dough" id="handtossed" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                         <label class="form-check-label" autofocus for="flexRadioDefault1">
                         Hand Tossed
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input dough" id="thincrust" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                        <input class="form-check-input dough" id="thincrust" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
                         <label class="form-check-label " for="flexRadioDefault2">
                             Thin Crust
                         </label>
                     </div> 
                     <div  class="form-check">
-                        <input class="form-check-input dough" id="nystyle" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                        <input class="form-check-input dough" id="nystyle" type="radio" name="flexRadioDefault" id="flexRadioDefault3" >
                         <label class="form-check-label" for="flexRadioDefault3">
                             New York Style
                         </label>
                     </div> 
                     <div  class="form-check">
-                        <input class="form-check-input dough" id="gluten" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                        <input class="form-check-input dough" id="gluten" type="radio" name="flexRadioDefault" id="flexRadioDefault4" >
                         <label class="form-check-label" for="flexRadioDefault4">
                             Gluten Free
                         </label><br><br>
