--- a/add_customer.html
+++ b/add_customer.html
@@ -70,7 +70,7 @@
         <label for="email">Email</label><br>
         <input type="email" id="email" autofocus><br><br>
 
-        <input type="submit" class="btn btn-warning" name="submit" id="submit" value="Add Delivery Information">
+        <input type="submit" class="btn btn-warning" name="submit" id="submit" value="Submit Your Delivery Info">
         <input type="button" class="btn btn-warning" name="cancel" id="cancel" value="Cancel">        
     </form>   
 </body>
