--- a/add_customer.html
+++ b/add_customer.html
@@ -40,7 +40,7 @@
         <input type="text" required id="name" placeholder="First and Last Name"><br><br>
  
         <label for="address_type">Address Type</label><br>
-        <select id="address_type" required>
+        <select id="address_type" >
             <option value="house">House</option>
             <option value="apartment">Apartment</option>
             <option value="business">Business</option>
