--- a/billing.html
+++ b/billing.html
@@ -43,10 +43,10 @@
             <h2 class="title mb-4">Enter Your billing information <small><output id="empCount"></output></small></h2>
             <form id="billingForm">
                 <label for="name">Full Name</label><br>
-                <input type="text" required id="name" placeholder="First and Last Name"autofocus><br><br>
+                <input type="text"  id="name" placeholder="First and Last Name"autofocus><br><br>
          
                 <label for="address_type">Address Type</label><br>
-                <select id="address_type" required>
+                <select id="address_type" >
                     <option value="house">House</option>
                     <option value="apartment">Apartment</option>
                     <option value="business">Business</option>
@@ -92,6 +92,7 @@
             </form> 
         </div>
     </div>
+    <script src="js/billing.js"></script>
     
 </body>
 </html>
