--- a/buildpizza.html
+++ b/buildpizza.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse ml-auto" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Order Now</a>
+                    <a class="nav-link" href="#">Order Now <span class="sr-only">(current)</span></a>
                   </li>
                  
                 </ul>
@@ -160,7 +160,7 @@
                     </div><br><br>
                 </div>
                 <div id="buttons">
-                    <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Finished Building Pizza</button>
+                    <button type="button" class="btn btn-warning btn-lg" id="submitOrder">Finish Building Your Pizza</button>
                     <button type="button" class="btn btn-warning btn-lg" id="cancelOrder">Cancel</button>
                 </div>
             </div> 
