--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Maki Home Page</title>
     <link rel="shortcut icon" type="image/jpg" href="images/pizza_cat_ico.png"/>
     <script src="js/main.js"></script>
+    <script src="js/add_customer.js"></script>
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     
