--- a/add_customer.html
+++ b/add_customer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Customer</title>
     <script src="js/add_customer.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -70,7 +71,7 @@
         <label for="email">Email</label><br>
         <input type="email" id="email" autofocus><br><br>
 
-        <input type="submit" class="btn btn-warning" name="submit" id="submit" value="Submit Your Delivery Info">
+        <input type="submit" class="btn btn-warning" name="submit" id="submitDel" value="Submit Your Delivery Info">
         <input type="button" class="btn btn-warning" name="cancel" id="cancel" value="Cancel">        
     </form>   
 </body>
